Pontoon: Update Slovak (sk) localization of Firefox Co-authored-by: Juraj Cigáň <kusavica@gmail.com>

--- a/sk/devtools/client/webide.properties
+++ b/sk/devtools/client/webide.properties
@@ -51,11 +51,26 @@ error_runtimeVersionTooRecent=Pripojený runtime má novšiu verziu zostavenia (
 # Variable: runtime app version (looks like this 52.a3) and firefox version (same format)
 error_runtimeVersionTooOld=Je pripojená stará verzia runtime (%1$S). Minimálna podporovaná verzia je (%2$S). Toto je nepdodporovaná konfigurácia a môže spôsobiť nefunkčnosť nástrojov pre vývojárov. Prosím, aktualizujte pripojené runtime.
 
+# LOCALIZATION NOTE (error_runtimeVersionTooOld67Debugger): Dedicated message
+# for a backward compatibility issue that occurs when connecting:
+# - from Fx 67 to 66 or to 65
+# - from Fx 68 to 66
+# Those are normally in range for DevTools compatibility policy, but specific non
+# backward compatible changes broke the debugger in those scenarios (Bug 1528219).
+# Variable: runtime app version (looks like this 52.a3)
+
+# LOCALIZATION NOTE (error_webIDEDeprecated2): Text for the deprecation message displayed when starting WebIDE.
+
+# LOCALIZATION NOTE (notification_openAboutDebugging): Text for a button displayed in the deprecation message for WebIDE.
+# Clicking on the button will open a tab on about:debugging.
+notification_openAboutDebugging.label=Otvoriť about:debugging
+notification_openAboutDebugging.accesskey=O
+
 addons_stable=stabilný
 addons_unstable=nestabilný
+
 addons_install_button=nainštalovať
 addons_uninstall_button=odinštalovať
-addons_adb_label=Doplnok ADB Helper
 addons_adb_warning=Bez tohto doplnku nebude možné vyhľadávať zariadenia USB
 addons_status_unknown=?
 addons_status_installed=Nainštalovaný
@@ -66,7 +81,6 @@ addons_status_installing=inštaluje sa
 
 runtimedetails_checkno=nie
 runtimedetails_checkyes=áno
-runtimedetails_checkunknown=neznáme (vyžaduje ADB Helper 0.4.0 alebo novší)
 runtimedetails_notUSBDevice=Nie je zariadenie USB
 
 # LOCALIZATION NOTE (runtimePanel_noadbextension): Displayed in the WebIDE right sidebar
