--- a/sk/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/sk/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Aktualizovať
 updateLoginButtonAccessKey = A
 updateLoginButtonDeny.label = Neaktualizovať
 updateLoginButtonDeny.accesskey = e
+updateLoginButtonDelete.label = Odstrániť uložené prihlasovacie údaje
+updateLoginButtonDelete.accesskey = r
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
