Pontoon: Update Portuguese (Portugal) (pt-PT) localization of Firefox Co-authored-by: Cláudio Esperança <cesperanc@gmail.com>

--- a/pt-PT/browser/chrome/browser/browser.properties
+++ b/pt-PT/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Fixado!
 confirmationHint.pinTab.description = Clique com o botão direito no separador para o desafixar.
 
 confirmationHint.passwordSaved.label = Palavra-passe guardada!
+confirmationHint.loginRemoved.label = Credencial removida!
 confirmationHint.breakageReport.label = Relatório enviado. Obrigado!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
