--- a/pt-PT/dom/chrome/accessibility/mac/accessible.properties
+++ b/pt-PT/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       principal
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      alerta
 alertDialog =      diálogo de alerta
+dialog      =      janela
 article     =      artigo
 document    =      documento
 # The (spoken) role description for the WAI-ARIA figure role
