Pontoon: Update Occitan (oc) localization of Firefox Co-authored-by: Quentí <quentinantonin@free.fr>

--- a/oc/browser/chrome/browser/browser.properties
+++ b/oc/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Penjat !
 confirmationHint.pinTab.description = Realizatz un clic drech sus l’onglet per lo despenjar.
 
 confirmationHint.passwordSaved.label = Senhal enregistrat !
+confirmationHint.loginRemoved.label = Identificant suprimit !
 confirmationHint.breakageReport.label = Rapòrt enviat. Mercés !
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
