--- a/oc/dom/chrome/accessibility/mac/accessible.properties
+++ b/oc/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       principal
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      alèrta
 alertDialog =      dialòg d'alèrta
+dialog      =      dialòg
 article     =      article
 document    =      document
 # The (spoken) role description for the WAI-ARIA figure role
