--- a/oc/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/oc/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Metre a jorn
 updateLoginButtonAccessKey = M
 updateLoginButtonDeny.label = Metre pas a jorn
 updateLoginButtonDeny.accesskey = p
+updateLoginButtonDelete.label = Suprimir l’identificant enregistrat
+updateLoginButtonDelete.accesskey = S
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
