Pontoon: Update Norwegian Bokmål (nb-NO) localization of Firefox Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/browser/chrome/browser/browser.properties
+++ b/nb-NO/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Festet!
 confirmationHint.pinTab.description = Høyreklikk på fanen for å løsne den.
 
 confirmationHint.passwordSaved.label = Passord lagret!
+confirmationHint.loginRemoved.label = Innlogging fjernet!
 confirmationHint.breakageReport.label = Rapport sendt. Takk skal du ha!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
