--- a/nb-NO/dom/chrome/accessibility/mac/accessible.properties
+++ b/nb-NO/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       hoved
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      varsel
 alertDialog =      varslingsdialog
+dialog      =      dialog
 article     =      artikkel
 document    =      dokument
 # The (spoken) role description for the WAI-ARIA figure role
