--- a/nn-NO/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/nn-NO/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Oppdater
 updateLoginButtonAccessKey = O
 updateLoginButtonDeny.label = Ikkje oppdater
 updateLoginButtonDeny.accesskey = o
+updateLoginButtonDelete.label = Fjern lagra innlogging
+updateLoginButtonDelete.accesskey = F
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Utan brukarnamn
-
 duplicateLoginTitle=Innlogginga finst allereie
 duplicateLogin=Ei duplikat innlogging finst allereie.
 
