Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Zakačeno!
 confirmationHint.pinTab.description = Desni klik na karticu za otkačivanje.
 
 confirmationHint.passwordSaved.label = Lozinka je spremljena!
+confirmationHint.loginRemoved.label = Prijava je uklonjena!
 confirmationHint.breakageReport.label = Prijavljeno. Hvala!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
