--- a/vi/devtools/client/webconsole.properties
+++ b/vi/devtools/client/webconsole.properties
@@ -226,6 +226,11 @@ webconsole.menu.selectAll.accesskey=A
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Mở trong thanh lề
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Kiểm tra đối tượng trong thanh lề
 webconsole.menu.openInSidebar.accesskey=V
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
