--- a/ja/browser/chrome/browser/browser.properties
+++ b/ja/browser/chrome/browser/browser.properties
@@ -1230,9 +1230,14 @@ confirmationHint.pinTab.label			=ピン留めしました！
 confirmationHint.pinTab.description		=タブを右クリックするとピン留めを外せます。
 
 confirmationHint.passwordSaved.label		=パスワードを保存しました！
+confirmationHint.loginRemoved.label		=ログイン情報が削除されました！
 confirmationHint.breakageReport.label		=レポートを送信しました。ありがとうございました！
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title			=%S ライブブックマーク
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch			=%S をウェブで検索
