--- a/ja/devtools/client/debugger.properties
+++ b/ja/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label		=インラインプレビューを表示
 # for hiding the inline preview block
 inlinePreview.hide.label		=インラインプレビューを隠す
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label			=デバッガー設定
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label	=JavaScript を無効化
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip	=JavaScript を無効化します。(再読み込みが必要です)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties			=プロパティなし
@@ -740,6 +751,10 @@ watchpoints.getWatchpoint		=プロパティの取得
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint		=プロパティの設定
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint		=プロパティの取得または設定
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
