--- a/ja-JP-mac/devtools/client/webconsole.properties
+++ b/ja-JP-mac/devtools/client/webconsole.properties
@@ -226,6 +226,11 @@ webconsole.menu.selectAll.accesskey	=A
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label	=サイドバーに開く
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1	=サイドバーでオブジェクトを調査
 webconsole.menu.openInSidebar.accesskey	=V
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
