--- a/ja-JP-mac/devtools/shared/screenshot.properties
+++ b/ja-JP-mac/devtools/shared/screenshot.properties
@@ -114,3 +114,20 @@ inspectNodeDesc			=CSS セレクター
 # parameter to the 'inspect' command. Displayed when the --help flag is
 # passed to the `screenshot command.
 inspectNodeManual		=document.querySelector() で一意に識別可能な CSS セレクター
+
+# LOCALIZATION NOTE (screenshotTruncationWarning) Text displayed to user when the image
+# that would be created by the screenshot is too big and needs to be truncated to avoid
+# errors.
+# The first parameter is the width of the final image and the second parameter is the
+# height of the image.
+screenshotTruncationWarning	=画像が大きすぎたため、%1$S×%2$S のサイズに切り抜きました。
+
+# LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
+# screenshot they want to take is for the full page and the Device Pixel Ratio is
+# decreased to 1, to avoid creating images that are too big which may cause errors.
+screenshotDPRDecreasedWarning	=画像が大きすぎたため、devicePixelRatio を 1 にしました。
+
+# LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
+# encountering an error while rendering the screenshot. This most often happens when the
+# resulting image is too large to be rendered.
+screenshotRenderingError	=画像の作成でエラーが発生しました。おそらく画像が大きすぎます。
