--- a/sq/browser/installer/nsisstrings.properties
+++ b/sq/browser/installer/nsisstrings.properties
@@ -9,12 +9,6 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
-# custom string and always use the same one as used by the en-US files.
-# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
-# for double ampersand) and prevents the letter following the ampersand from
-# being used as an accesskey.
-
 # Do not replace $BrandShortName, $BrandProductName, $BrandFullName,
 # or $BrandFullNameDA with a custom string and always use the same one as used
 # by the en-US files.
@@ -27,16 +21,15 @@
 
 INSTALLER_WIN_CAPTION=Instaluesi i $BrandShortName-it
 
-# The \n in the next two strings can be moved or deleted as needed to make
-# the string fit in the 3 lines of space available.
-STUB_CLEANUP_PAVEOVER_HEADER=$BrandShortName-i është tashmë i instaluar.\nLe ta përditësojmë.
-STUB_CLEANUP_REINSTALL_HEADER=$BrandShortName-i është instaluar më parë.\nLe të marrim për ju një kopje të re.
-
 STUB_CLEANUP_PAVEOVER_HEADER2=$BrandShortName-i është tashmë i instaluar. Le ta përditësojmë.
 STUB_CLEANUP_REINSTALL_HEADER2=$BrandShortName-i është instaluar më parë. Le të marrim për ju një kopje të re.
 STUB_CLEANUP_PAVEOVER_BUTTON=&Përditësojeni
 STUB_CLEANUP_REINSTALL_BUTTON=&Ri-instalojeni
 STUB_CLEANUP_CHECKBOX_LABEL=&Rikthe rregullimet parazgjedhje dhe hiqi shtesat e vjetra, për punim optimal
+
+STUB_CLEANUP_PAVEOVER_BUTTON2=Përditësoje
+STUB_CLEANUP_REINSTALL_BUTTON2=Riinstaloje
+STUB_CLEANUP_CHECKBOX_LABEL2=Rikthe rregullimet parazgjedhje dhe hiqi shtesat e vjetra, për punim optimal
 
 STUB_INSTALLING_LABEL2=Tani po instalohet…
 # The \n in the next string is intended to force a nice-looking layout in en-US
@@ -44,6 +37,8 @@ STUB_INSTALLING_LABEL2=Tani po instalohet…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Vini privatësinë tuaj mbi gjithçka.\nMerrni $BrandProductName.
 STUB_INSTALLING_BODY=Merrni pjesën tjetër të produkteve tona "privatësia mbi të gjitha", dhe mësoni se si të jeni më të mençur dhe më të parrezikuar në internet.
+STUB_INSTALLING_HEADLINE2=Po optimizohen rregullimet tuaja, për shpejtësi, privatësi dhe siguri.
+STUB_INSTALLING_BODY2=$BrandShortName-i do të jetë gati brenda pak çastesh.
 STUB_BLURB_FIRST1=$BrandShortName-i më i shpejtë, më reagues deri më sot
 STUB_BLURB_SECOND1=Ngarkime faqesh dhe kalime nga një skedë në tjetrën më të shpejta
 STUB_BLURB_THIRD1=Shfletim privat i fuqishëm
