--- a/sq/devtools/shared/screenshot.properties
+++ b/sq/devtools/shared/screenshot.properties
@@ -114,3 +114,20 @@ inspectNodeDesc=Përzgjedhës CSS
 # parameter to the 'inspect' command. Displayed when the --help flag is
 # passed to the `screenshot command.
 inspectNodeManual=Përzgjedhës CSS për përdorim me document.querySelector i cili identifikon vetëm një element
+
+# LOCALIZATION NOTE (screenshotTruncationWarning) Text displayed to user when the image
+# that would be created by the screenshot is too big and needs to be truncated to avoid
+# errors.
+# The first parameter is the width of the final image and the second parameter is the
+# height of the image.
+screenshotTruncationWarning=Figura u pre sa %1$S×%2$S, ngaqë figura që do dilte qe shumë e madhe
+
+# LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
+# screenshot they want to take is for the full page and the Device Pixel Ratio is
+# decreased to 1, to avoid creating images that are too big which may cause errors.
+screenshotDPRDecreasedWarning=Parametri Device Pixel Ratio u reduktua në 1, ngaqë figura që do të dilte qe shumë e madhe
+
+# LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
+# encountering an error while rendering the screenshot. This most often happens when the
+# resulting image is too large to be rendered.
+screenshotRenderingError=Gabim në krijimin e figurës. Figura që doli qe ndoshta shumë e madhe.
