--- a/ja/dom/chrome/accessibility/mac/accessible.properties
+++ b/ja/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main		=メイン
 # The (spoken) role description for various WAI-ARIA roles
 alert		=警告
 alertDialog	=警告ダイアログ
+dialog		=ダイアログ
 article		=記事
 document	=文書
 # The (spoken) role description for the WAI-ARIA figure role
