--- a/ja/netwerk/necko.properties
+++ b/ja/netwerk/necko.properties
@@ -58,6 +58,9 @@ CookieAllowedForOriginOnTrackerByHeuristic		=“%1$S” の トラッカー “%
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic			=“%1$S” の トラッカー “%2$S” へのストレージアクセスが自動的に許可されました。
 
+# LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForFpiByHeuristic		=ファーストパーティ分離された “%2$S” のストレージアクセスが “%1$S” で自動的に許可されました。
+
 # LOCALIZATION NOTE(CookieRejectedNonRequiresSecure): %1$S is the cookie name. Do not localize "sameSite=none" and "secure".
 CookieRejectedNonRequiresSecure		=Cookie “%1$S” は “sameSite=none” 属性を持ちますが  “secure” 属性が足りないため拒否されました。
 # LOCALIZATION NOTE(CookieRejectedNonRequiresSecureForBeta): %1$S is the cookie name. %2$S is a URL. Do not localize "sameSite", "sameSite=none" and "secure".
