--- a/ja/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/ja/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText			=更新する
 updateLoginButtonAccessKey		=U
 updateLoginButtonDeny.label		=更新しない
 updateLoginButtonDeny.accesskey		=D
+updateLoginButtonDelete.label		=保存されたログイン情報を削除
+updateLoginButtonDelete.accesskey	=R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
