--- a/ja-JP-mac/dom/chrome/accessibility/AccessFu.properties
+++ b/ja-JP-mac/dom/chrome/accessibility/AccessFu.properties
@@ -138,6 +138,8 @@ main           =       メインコンテンツ
 navigation     =       ナビゲーション
 search         =       検索ツール
 
+region         =       領域
+
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
