--- a/ja-JP-mac/toolkit/chrome/global/narrate.properties
+++ b/ja-JP-mac/toolkit/chrome/global/narrate.properties
@@ -5,6 +5,11 @@
 # Narrate, meaning "read the page out loud". This is the name of the feature
 # and it is the label for the popup button.
 narrate			=読み上げ
+
+# "Listen, which allows users to listen to Firefox reading the text, 
+# instead of having to read it themselves." This is the name
+# of the feature and it is the label for the popup button.
+listen			=聴く
 back			=戻る
 start			=開始
 stop			=停止
