Pontoon: Update Albanian (sq) localization of Firefox Co-authored-by: Besnik Bleta <besnik@programeshqip.org>

--- a/sq/devtools/client/jsonview.properties
+++ b/sq/devtools/client/jsonview.properties
@@ -32,6 +32,8 @@ jsonViewer.Copy=Kopjoje
 # LOCALIZATION NOTE (jsonViewer.ExpandAll): Label for expanding all nodes
 jsonViewer.ExpandAll=Zgjeroji Krejt
 
+jsonViewer.ExpandAllSlow=Zgjeroji Krejt (e ngadaltë)
+
 # LOCALIZATION NOTE (jsonViewer.CollapseAll): Label for collapsing all nodes
 jsonViewer.CollapseAll=Tkurri Krejt
 
