--- a/sq/dom/chrome/accessibility/mac/accessible.properties
+++ b/sq/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       kryesorja
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      sinjalizim
 alertDialog =      dialog sinjalizimi
+dialog      =      dialog
 article     =      artikull
 document    =      dokument
 # The (spoken) role description for the WAI-ARIA figure role
@@ -55,3 +56,9 @@ timer       =      kohëmatës
 tooltip     =      ndihmëz
 separator    =      ndarës
 tabPanel     =      panel skedash
+# The roleDescription for the html:mark element
+highlight = theksim
+# The roleDescription for the details element
+details = hollësi
+# The roleDescription for the summary element
+summary = përmbledhje
