Pontoon: Update Albanian (sq) localization of Firefox Co-authored-by: Besnik Bleta <besnik@programeshqip.org>

--- a/sq/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/sq/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Përditësoje
 updateLoginButtonAccessKey = P
 updateLoginButtonDeny.label = Mos e Përditëso
 updateLoginButtonDeny.accesskey = M
+updateLoginButtonDelete.label = Hiq Kredenciale Hyrjesh të Ruajtur
+updateLoginButtonDelete.accesskey = H
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
