--- a/sq/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/sq/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Riniseni %S-in
 restartMessageNoUnlocker=%S-i është duke xhiruar ndërkohë, por nuk po përgjigjet. Për të hapur një dritare të re, duhet së pari të mbyllni procesin ekzistues %S, ose të rinisni sistemin tuaj.
+restartMessageNoUnlocker2=%S-i është duke xhiruar ndërkohë, por nuk po përgjigjet. Për të përdorur %S, duhet së pari të mbyllni procesin ekzistues %S, të rinisni pajisjen tuaj ose të përdorni një profil tjetër.
 restartMessageUnlocker=%S-i është duke xhiruar ndërkohë, por nuk përgjigjet. Për të hapur një dritare të re, duhet mbyllur procesi i vjetër %S.
 restartMessageNoUnlockerMac=Ka tashmë një kopje të %S-it të hapur. Mund të hapet vetëm një kopje e %S-it çdo herë.
 restartMessageUnlockerMac=Ka tashmë një kopje të %S-it të hapur. Kopja xhiruese e %S-it do të mbyllet, që të hapet kjo.
