Pontoon: Update Lithuanian (lt) localization of Firefox Co-authored-by: Paulius <paulius@mozilla.lt>

--- a/lt/browser/chrome/browser/browser.properties
+++ b/lt/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Įsegta!
 confirmationHint.pinTab.description = Norėdami išsegti kortelę, spustelėkite ją dešiniuoju pelės klavišu.
 
 confirmationHint.passwordSaved.label = Slaptažodis įrašytas!
+confirmationHint.loginRemoved.label = Prisijungimas pašalintas!
 confirmationHint.breakageReport.label = Pranešimas išsiųstas. Ačiū!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
