--- a/lt/dom/chrome/security/security.properties
+++ b/lt/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Nešifruotame (http://) kadre aptiktas slaptaž
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Įkeliamas mišrus (nesaugus) aktyvus turinys „%1$S“ šifruotame tinklalapyje
 LoadingMixedDisplayContent2=Įkeliamas mišrus (nesaugus) pasyvus turinys „%1$S“ šifruotame tinklalapyje
+LoadingMixedDisplayObjectSubrequestDeprecation=Mišraus (nesaugaus) turinio „%1$S“ įkėlimas į saugiame tinklalapyje esantį papildinį yra nerekomenduojamas, ir netrukus bus blokuojamas.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=„iframe“ elementas, kurio „sandbox“ atribute nurodyti tiek „allow-scripts“, tiek „allow-same-origin“, gali panaikinti savo izoliavimą.
 
