--- a/lt/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/lt/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Atnaujinti
 updateLoginButtonAccessKey = N
 updateLoginButtonDeny.label = Neatnaujinti
 updateLoginButtonDeny.accesskey = N
+updateLoginButtonDelete.label = Pašalinti įrašytą prisijungimą
+updateLoginButtonDelete.accesskey = r
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Nėra naudotojo vardo
-
 duplicateLoginTitle=Prisijungimas jau yra
 duplicateLogin=Toks prisijungimas jau yra.
 
