--- a/lt/dom/chrome/accessibility/mac/accessible.properties
+++ b/lt/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       pagrindinis turinys
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      pranešimas
 alertDialog =      pranešimo dialogas
+dialog      =      dialogas
 article     =      straipsnis
 document    =      dokumentas
 # The (spoken) role description for the WAI-ARIA figure role
