--- a/lt/toolkit/chrome/global/aboutReader.properties
+++ b/lt/toolkit/chrome/global/aboutReader.properties
@@ -35,11 +35,18 @@ aboutReader.fontType.serif=Su užraitais
 aboutReader.fontType.sans-serif=Be užraitų
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+# For followup see: https://bugzilla.mozilla.org/show_bug.cgi?id=1637089 
 aboutReader.fontTypeSample=Aa
 
 aboutReader.toolbar.close=Išjungti skaitymo rodinį
 aboutReader.toolbar.typeControls=Tipų valdymas
 
+# This is used as a label for the Reader View toolbar button.
+# This is a label used for the Save to Pocket option in the toolbar.
+# %S is replaced by Pocket.
+readerView.savetopocket.label=Įrašyti į „%S“
+# This is a label used for done option in the toolbar
+readerView.done.label=Atlikta
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=Pereiti į skaitymo rodinį
