Pontoon: Update Albanian (sq) localization of Firefox Co-authored-by: Besnik Bleta <besnik@programeshqip.org>

--- a/sq/dom/chrome/layout/css.properties
+++ b/sq/dom/chrome/layout/css.properties
@@ -7,6 +7,7 @@ MimeNotCssWarn=Stilfleta %1$S u ngarkua si CSS edhe pse lloji MIME i saj, "%2$S"
 
 PEUnexpEOF2=Fund i papritur kartele ndërkohë që kërkohej për %1$S.
 PEParseRuleWSOnly=Varg vetëm me hapësira të zbrazëta, dhënë për përtypje si rregull.
+
 PEDeclDropped=Deklaratë e hedhur tej.
 PEDeclSkipped=Anashkaloi drejt deklaratës tjetër.
 PEUnknownProperty=Veti '%1$S' e panjohur.
@@ -178,6 +179,8 @@ PESubgridNotSupported=S’është aktivizuar fjalëkyçi 'subgrid' i Rrjetës CS
 PEMoreThanOneGridRepeatAutoFillInNameList=Lejohet vetëm një repeat(auto-fill, …) në një listë emrash për një nënrrjetë.
 PEMoreThanOneGridRepeatAutoFillFitInTrackList=Lejohet vetëm një repeat(auto-fill, …) ose repeat(auto-fit, …) në një listë gjurmësh.
 PEMoreThanOneGridRepeatTrackSize=Brenda repeat(auto-fit/auto-fill, …) lejohet vetëm madhësi gjurme.
+
+PEDisallowedImportRule=Rregullat @import s’janë ende të vlefshëm në fletëstile të krijuar.
 
 TooLargeDashedRadius=Rrezja e anës është shumë e gjerë për stilin ‘me vija’ (kufiri është 100000px). Po vizatohet si e mbushur.
 TooLargeDottedRadius=Rrezja e anës është shumë e gjerë për stilin ‘me pika’ (kufiri është 100000px). Po vizatohet si e mbushur.
