--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -1222,9 +1222,14 @@ confirmationHint.pinTab.label = U fiksua!
 confirmationHint.pinTab.description = Djathtasklikoni mbi skedën që të hiqet nga e fiksuar.
 
 confirmationHint.passwordSaved.label = Fjalëkalim u ruajt!
+confirmationHint.loginRemoved.label = Kredencialet e hyrjes u hoqën!
 confirmationHint.breakageReport.label = Raporti u dërgua. Faleminderit!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = Faqerojtës të Gjallë %S
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Kërkoni në internet për %S
