Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: aaneitchik <aaneitchik@gmail.com> Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/browser/chrome/browser/browser.properties
+++ b/be/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Прышпілена!
 confirmationHint.pinTab.description = Націсніце правай кнопкай на картцы, каб адшпіліць.
 
 confirmationHint.passwordSaved.label = Пароль захаваны!
+confirmationHint.loginRemoved.label = Лагін выдалены!
 confirmationHint.breakageReport.label = Справаздача адпраўлена. Дзякуй!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
