--- a/be/devtools/client/performance.properties
+++ b/be/devtools/client/performance.properties
@@ -63,14 +63,11 @@ graphs.memory=МБ
 # as the legend for each block in every bar. These labels should be kept
 # AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
 category.other=Gecko
-category.css=Стылі
 category.layout=Выклад
 category.js=JIT
 category.gc=GC
 category.network=Сетка
 category.graphics=Графіка
-category.storage=Сховішча
-category.events=Увядзенне і падзеі
 category.dom=DOM
 category.idle=Бяздзейны
 category.tools=Прылады
@@ -144,15 +141,15 @@ profiler.bufferFull=Буфер запоўнены на %S%%
 
 # LOCALIZATION NOTE (recordings.start):
 # The label shown on the main recording buttons to start recording.
-recordings.start=Пачаць запіс прадукцыйнасць
+recordings.start=Пачаць запіс прадукцыйнасці
 
 # LOCALIZATION NOTE (recordings.stop):
 # The label shown on the main recording buttons to stop recording.
-recordings.stop=Спыніць запіс прадукцыйнасць
+recordings.stop=Спыніць запіс прадукцыйнасці
 
 # LOCALIZATION NOTE (recordings.start.tooltip):
 # This string is displayed as a tooltip on a button that starts a new profile.
-recordings.start.tooltip=Уключае рэжым запісу прадукцыйнасць.
+recordings.start.tooltip=Уключае рэжым запісу прадукцыйнасці.
 
 # LOCALIZATION NOTE (recordings.import.tooltip):
 # This string is displayed on a button that opens a dialog to import a saved profile data file.
