--- a/be/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/be/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Закрыць %S
 restartMessageNoUnlocker=%S ужо выконваецца, але не адклікаецца. Каб адкрыць новае акно, вы мусіце спачатку закрыць існуючы працэс %S ці перазапусціць вашу сістэму.
+restartMessageNoUnlocker2=%S ужо выконваецца, але не адклікаецца. Каб выкарыстаць %S, вы мусіце спачатку закрыць наяўны працэс %S, перазапусціць сваю прыладу альбо выкарыстаць іншы профіль.
 restartMessageUnlocker=%S ужо выконваецца, але не адклікаецца. Вы мусіце спачатку закрыць стары працэс %S, каб адкрыць новае акно.
 restartMessageNoUnlockerMac=Копія %S ужо адкрыта. Можа быць адкрыта толькі адна копія %S.
 restartMessageUnlockerMac=Копія %S ужо адкрыта. Копія %S, якая выконваецца, будзе закрыта, каб адкрыць гэтую.
