Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/be/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Абнавіць
 updateLoginButtonAccessKey = А
 updateLoginButtonDeny.label = Не абнаўляць
 updateLoginButtonDeny.accesskey = Н
+updateLoginButtonDelete.label = Выдаліць захаваны лагін
+updateLoginButtonDelete.accesskey = В
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
