--- a/be/browser/installer/nsisstrings.properties
+++ b/be/browser/installer/nsisstrings.properties
@@ -9,12 +9,6 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
-# custom string and always use the same one as used by the en-US files.
-# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
-# for double ampersand) and prevents the letter following the ampersand from
-# being used as an accesskey.
-
 # Do not replace $BrandShortName, $BrandProductName, $BrandFullName,
 # or $BrandFullNameDA with a custom string and always use the same one as used
 # by the en-US files.
@@ -27,15 +21,15 @@
 
 INSTALLER_WIN_CAPTION=Усталяванне $BrandShortName
 
-# The \n in the next two strings can be moved or deleted as needed to make
-# the string fit in the 3 lines of space available.
-STUB_CLEANUP_PAVEOVER_HEADER=$BrandShortName ужо ўсталяваны.\nДавайце яго абновім.
-STUB_CLEANUP_REINSTALL_HEADER=$BrandShortName ужо быў усталяваны раней.\nДавайце атрымаем новую копію.
 STUB_CLEANUP_PAVEOVER_HEADER2=$BrandShortName ужо ўсталяваны. Давайце яго абновім.
 STUB_CLEANUP_REINSTALL_HEADER2=$BrandShortName ужо быў усталяваны раней. Давайце атрымаем новую копію.
 STUB_CLEANUP_PAVEOVER_BUTTON=&Абнавіць
 STUB_CLEANUP_REINSTALL_BUTTON=Пера&ўсталяваць
 STUB_CLEANUP_CHECKBOX_LABEL=&Аднавіць тыповыя налады і выдаліць старыя дадаткі для аптымальнай прадукцыйнасці
+
+STUB_CLEANUP_PAVEOVER_BUTTON2=Абнавіць
+STUB_CLEANUP_REINSTALL_BUTTON2=Пераўсталяваць
+STUB_CLEANUP_CHECKBOX_LABEL2=Аднавіць тыповыя налады і выдаліць старыя дадаткі для аптымальнай прадукцыйнасці
 
 STUB_INSTALLING_LABEL2=Ідзе ўсталяванне…
 # The \n in the next string is intended to force a nice-looking layout in en-US
@@ -43,6 +37,7 @@ STUB_INSTALLING_LABEL2=Ідзе ўсталяванне…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Пастаўце сваю прыватнасць на першае месца.\nДалучайцеся да $BrandProductName.
 STUB_INSTALLING_BODY=Атрымайце рэшту нашых скіраваных на прыватнасць прадуктаў, а таксама даведайцеся, як заставацца больш кемлівымі і бяспечнымі ў сеціве.
+STUB_INSTALLING_HEADLINE2=Аптымізацыя налад для хуткасці, прыватнасці і бяспекі.
 STUB_BLURB_FIRST1=Самы хуткі, самы спагадлівы $BrandShortName чым калі-небудзь
 STUB_BLURB_SECOND1=Больш хуткія загрузка старонак і пераключэнне паміж карткамі
 STUB_BLURB_THIRD1=Магутнае прыватнае агляданне
