--- a/be/toolkit/chrome/global/aboutReader.properties
+++ b/be/toolkit/chrome/global/aboutReader.properties
@@ -6,7 +6,7 @@
 # Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 aboutReader.loading2=Загрузка…
-aboutReader.loadError=Не атрымалася загрузіць артыкул са старонкі
+aboutReader.loadError=Не ўдалося загрузіць артыкул са старонкі
 
 aboutReader.colorScheme.light=Светлы
 aboutReader.colorScheme.dark=Цёмны
@@ -35,11 +35,18 @@ aboutReader.fontType.serif=З засечкамі
 aboutReader.fontType.sans-serif=Без засечак
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+# For followup see: https://bugzilla.mozilla.org/show_bug.cgi?id=1637089 
 aboutReader.fontTypeSample=Aa
 
 aboutReader.toolbar.close=Закрыць Рэжым чытання
 aboutReader.toolbar.typeControls=Налады шрыфтоў
 
+# This is used as a label for the Reader View toolbar button.
+# This is a label used for the Save to Pocket option in the toolbar.
+# %S is replaced by Pocket.
+readerView.savetopocket.label=Захаваць у %S
+# This is a label used for done option in the toolbar
+readerView.done.label=Гатова
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=Увайсці ў Рэжым чытання
