--- a/be/browser/installer/nsisstrings.properties
+++ b/be/browser/installer/nsisstrings.properties
@@ -38,6 +38,7 @@ STUB_INSTALLING_LABEL2=Ідзе ўсталяванне…
 STUB_INSTALLING_HEADLINE=Пастаўце сваю прыватнасць на першае месца.\nДалучайцеся да $BrandProductName.
 STUB_INSTALLING_BODY=Атрымайце рэшту нашых скіраваных на прыватнасць прадуктаў, а таксама даведайцеся, як заставацца больш кемлівымі і бяспечнымі ў сеціве.
 STUB_INSTALLING_HEADLINE2=Аптымізацыя налад для хуткасці, прыватнасці і бяспекі.
+STUB_INSTALLING_BODY2=$BrandShortName будзе гатовы праз некалькі імгненняў.
 STUB_BLURB_FIRST1=Самы хуткі, самы спагадлівы $BrandShortName чым калі-небудзь
 STUB_BLURB_SECOND1=Больш хуткія загрузка старонак і пераключэнне паміж карткамі
 STUB_BLURB_THIRD1=Магутнае прыватнае агляданне
