Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/dom/chrome/accessibility/mac/accessible.properties
+++ b/be/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       галоўны
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      перасцярога
 alertDialog =      дыялог перасцярогі
+dialog      =      дыялог
 article     =      артыкул
 document    =      дакумент
 # The (spoken) role description for the WAI-ARIA figure role
