--- a/be/dom/chrome/accessibility/AccessFu.properties
+++ b/be/dom/chrome/accessibility/AccessFu.properties
@@ -130,6 +130,8 @@ main           =       галоўны
 navigation     =       навігацыя
 search         =       пошук
 
+region         =       рэгіён
+
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
