--- a/be/devtools/shared/screenshot.properties
+++ b/be/devtools/shared/screenshot.properties
@@ -114,3 +114,20 @@ inspectNodeDesc=CSS-селектар
 # parameter to the 'inspect' command. Displayed when the --help flag is
 # passed to the `screenshot command.
 inspectNodeManual=CSS-селектар, які выкарыстоўваецца з document.querySelector, ідэнтыфікуе адзіночны элемент
+
+# LOCALIZATION NOTE (screenshotTruncationWarning) Text displayed to user when the image
+# that would be created by the screenshot is too big and needs to be truncated to avoid
+# errors.
+# The first parameter is the width of the final image and the second parameter is the
+# height of the image.
+screenshotTruncationWarning=Выява абрэзана да %1$S×%2$S, бо атрыманы відарыс быў занадта вялікім
+
+# LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
+# screenshot they want to take is for the full page and the Device Pixel Ratio is
+# decreased to 1, to avoid creating images that are too big which may cause errors.
+screenshotDPRDecreasedWarning=Піксельныя суадносіны прылады паменшаны да 1, бо атрыманы відарыс быў занадта вялікім
+
+# LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
+# encountering an error while rendering the screenshot. This most often happens when the
+# resulting image is too large to be rendered.
+screenshotRenderingError=Памылка стварэння выявы. Магчыма, атрыманы відарыс быў занадта вялікім.
