Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/devtools/client/netmonitor.properties
+++ b/be/devtools/client/netmonitor.properties
@@ -604,7 +604,7 @@ netmonitor.perfNotice3=Аналізаваць
 
 # LOCALIZATION NOTE (netmonitor.reload1/2/3): These are the labels displayed
 # in the network table when empty to start logging network requests.
-netmonitor.reloadNotice1=• Выканаць запыт ці
+netmonitor.reloadNotice1=• Выканайце запыт альбо
 netmonitor.reloadNotice2=Перачытаць
 netmonitor.reloadNotice3=, каб пабачыць падрабязныя звесткі па сеткавай актыўнасці.
 
