Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/devtools/client/performance.properties
+++ b/be/devtools/client/performance.properties
@@ -153,7 +153,7 @@ recordings.start.tooltip=Уключае рэжым запісу прадукцы
 
 # LOCALIZATION NOTE (recordings.import.tooltip):
 # This string is displayed on a button that opens a dialog to import a saved profile data file.
-recordings.import.tooltip=Імпарт…
+recordings.import.tooltip=Імпартаваць…
 
 # LOCALIZATION NOTE (recordings.clear.tooltip):
 # This string is displayed on a button that removes all the recordings.
