Pontoon: Update Occitan (oc) localization of Firefox Co-authored-by: Quentí <quentinantonin@free.fr>

--- a/oc/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/oc/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -35,7 +35,7 @@ rememberPasswordMsgNoUsername = Volètz enregistrar lo senhal per %S ?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
 noUsernamePlaceholder=Pas cap de nom d'utilizaire
-togglePasswordLabel=Mostrar los senhals
+togglePasswordLabel=Mostrar lo senhal
 togglePasswordAccessKey2=m
 notNowButtonText = &Pas ara
 neverForSiteButtonText = Pas &jamai per aqueste sit
