Pontoon: Update Arabic (ar) localization of Firefox Co-authored-by: صفا الفليج <safa1996alfulaij@gmail.com>

--- a/ar/toolkit/chrome/global/findbar.properties
+++ b/ar/toolkit/chrome/global/findbar.properties
@@ -10,6 +10,7 @@ NormalFind=ابحث في الصفحة
 FastFind=بحث سريع
 FastFindLinks=بحث سريع (روابط فقط)
 CaseSensitive=(حساس لحالة الأحرف)
+MatchDiacritics=(مطابقة الحركات تعمل)
 EntireWord=(الكلمات الكاملة فقط)
 # LOCALIZATION NOTE (FoundMatches): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
