--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -375,6 +375,8 @@ detachLabel=Disigi…
 detachLabelAccesskey=D
 deleteLabel=Forigi
 deleteLabelAccesskey=F
+openFolderLabel=Malfermi entenantan dosierujon
+openFolderLabelAccesskey=u
 deleteAttachments=The following attachments will be permanently deleted from this message:\n%S\nThis action cannot be undone. Do you wish to continue?
 detachAttachments=The following attachments have been successfully saved and will now be permanently deleted from this message:\n%S\nThis action cannot be undone. Do you wish to continue?
 deleteAttachmentFailure=Failed to delete the selected attachments.
