Pontoon: Update Arabic (ar) localization of Firefox Co-authored-by: صفا الفليج <safa1996alfulaij@gmail.com>

--- a/ar/devtools/client/layout.properties
+++ b/ar/devtools/client/layout.properties
@@ -86,6 +86,7 @@ flexbox.itemSizing.notSetToShrink=لم يُضبط العنصر ليتقلّص.
 
 # LOCALIZATION NOTE (flexbox.togglesFlexboxHighlighter2): The tooltip text for the Flexbox
 # toggle button.
+flexbox.togglesFlexboxHighlighter2=فعّل/عطّل ميزة إبراز الصناديق المرنة
 
 # LOCALIZATION NOTE (layout.cannotShowGridOutline, layout.cannotSHowGridOutline.title):
 # In the case where the grid outline cannot be effectively displayed.
