Pontoon: Update Georgian (ka) localization of Firefox Co-authored-by: G12r <georgianization@outlook.com>

--- a/ka/browser/chrome/browser/browser.properties
+++ b/ka/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = მიმაგრებულია!
 confirmationHint.pinTab.description = მარჯვენა-წკაპი ჩანართზე, მიმაგრების მოსახსნელად.
 
 confirmationHint.passwordSaved.label = პაროლი შენახულია!
+confirmationHint.loginRemoved.label = მონაცემები მოცილებულია!
 confirmationHint.breakageReport.label = მოხსენება გაგზავნილია. გმადლობთ!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
