--- a/ka/dom/chrome/accessibility/mac/accessible.properties
+++ b/ka/dom/chrome/accessibility/mac/accessible.properties
@@ -4,14 +4,14 @@
 
 jump    =       გადასვლა
 press   =       დაჭერა
-check   =       ჩართვა
-uncheck =       ამორთვა
-select  =       მონიშვნა
+check   =       მონიშვნა
+uncheck =       მოხსნა
+select  =       არჩევა
 open    =       გახსნა
 close   =       დახურვა
 switch  =       გადართვა
 click   =       დაწკაპება
-collapse=       შეკუმშვა
+collapse=       აკეცვა
 expand  =       გაშლა
 activate=       ამოქმედება
 cycle   =       ციკლი
@@ -26,7 +26,7 @@ tab     =       ჩანართი
 term    =       ტერმინი
 definition =    განსაზღვრება
 # The Role Description for an input type="search" text field
-searchTextField = ტექსტური ველის ძიება
+searchTextField = ტექსტის ძიების ველი
 # The Role Description for WAI-ARIA Landmarks
 application =   პროგრამა
 search  =       ძიება
@@ -36,8 +36,9 @@ complementary = დამატებითი
 content =       შიგთავსი
 main    =       ძირითადი
 # The (spoken) role description for various WAI-ARIA roles
-alert       =      გაფრთხილება
-alertDialog =      განგაშის დიალოგი
+alert       =      შეტყობინება
+alertDialog =      შეტყობინების ფანჯარა
+dialog      =      ამომხტომი ფანჯარა
 article     =      სტატია
 document    =      დოკუმენტი
 # The (spoken) role description for the WAI-ARIA figure role
@@ -45,7 +46,7 @@ document    =      დოკუმენტი
 figure     =      გამოსახულება
 # The (spoken) role description for the WAI-ARIA heading role
 # https://w3c.github.io/aria/core-aam/core-aam.html#role-map-heading
-heading     =      heading
+heading     =      სათაური
 log         =      ჩანაწერები
 marquee     =      მორბენალი სტრიქონი
 math        =      მათემატიკური
