Pontoon: Update Georgian (ka) localization of Firefox Co-authored-by: G12r <georgianization@outlook.com>

--- a/ka/dom/chrome/security/security.properties
+++ b/ka/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=პაროლის ველები წა
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=მოქმედი შერეული (დაუცველი) “%1$S” შიგთავსის ჩატვირთვა, დაცულ გვერდზე
 LoadingMixedDisplayContent2=შერეული (დაუცველი) საჩვენები შიგთავსის "%1$S" ჩატვირთვა დაცულ გვერდზე
+LoadingMixedDisplayObjectSubrequestDeprecation=შერეული (დაუცველი) „%1$S“ შიგთავსის ჩატვირთვა მოდულში დაცულ გვერდზე არასასურველია და მალე შეიზღუდება.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=iframe-ს, რომელსაც აქვს ორივე allow-scripts და allow-same-origin მისი sandbox ატრიბუტისთვის , შეუძლია თავისი sandboxing-ის მოშორება.
 
