--- a/ka/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/ka/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = განახლება
 updateLoginButtonAccessKey = ხ
 updateLoginButtonDeny.label = განახლების გარეშე
 updateLoginButtonDeny.accesskey = გ
+updateLoginButtonDelete.label = შენახული მონაცემების მოცილება
+updateLoginButtonDelete.accesskey = ც
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=მომხმარებლის სახელი არაა მითითებული
-
 duplicateLoginTitle=ასეთი ანგარიში უკვე არსებობს
 duplicateLogin=მსგავსი ანგარიში უკვე არსებობს.
 
