--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -377,9 +377,9 @@ deleteLabel=Forigi
 deleteLabelAccesskey=F
 openFolderLabel=Malfermi entenantan dosierujon
 openFolderLabelAccesskey=u
-deleteAttachments=The following attachments will be permanently deleted from this message:\n%S\nThis action cannot be undone. Do you wish to continue?
-detachAttachments=The following attachments have been successfully saved and will now be permanently deleted from this message:\n%S\nThis action cannot be undone. Do you wish to continue?
-deleteAttachmentFailure=Failed to delete the selected attachments.
+deleteAttachments=La jenaj kunsendaĵoj estos neinversigeble forigitaj el tiu ĉi mesaĝo:\n%S\nTiu ĉi ago ne povos esti malfarita. Ĉu pluigi?
+detachAttachments=La jenaj kunsendaĵoj estis konservitaj kaj nun estos neinversigeble forigitaj el tiu ĉi mesaĝo:\n%S\nTiu ĉi ago ne povos esti malfarita. Ĉu pluigi?
+deleteAttachmentFailure=Fiaskis forigi la elektitajn kunsendaĵojn.
 emptyAttachment=This attachment appears to be empty.\nPlease check with the person who sent this.\nOften company firewalls or antivirus programs will destroy attachments.
 
 # LOCALIZATION NOTE (attachmentCount): Semi-colon list of plural forms.
