Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -380,7 +380,8 @@ openFolderLabelAccesskey=u
 deleteAttachments=La jenaj kunsendaĵoj estos neinversigeble forigitaj el tiu ĉi mesaĝo:\n%S\nTiu ĉi ago ne povos esti malfarita. Ĉu pluigi?
 detachAttachments=La jenaj kunsendaĵoj estis konservitaj kaj nun estos neinversigeble forigitaj el tiu ĉi mesaĝo:\n%S\nTiu ĉi ago ne povos esti malfarita. Ĉu pluigi?
 deleteAttachmentFailure=Fiaskis forigi la elektitajn kunsendaĵojn.
-emptyAttachment=This attachment appears to be empty.\nPlease check with the person who sent this.\nOften company firewalls or antivirus programs will destroy attachments.
+emptyAttachment=Tiu ĉi kunsendaĵo ŝajnas esti malplena.\nKontaktu la sendinton por klarigi tion ĉi.\nOfte firmaaj fajroŝirmiloj kaj kontraŭvirusaj programoj detruas kunsendaĵojn.
+externalAttachmentNotFound=Tiu ĉi apartigita kunsendaĵo kun dosiero aŭ ligilo ne estas plu alirebla en tiu ĉi loko.
 
 # LOCALIZATION NOTE (attachmentCount): Semi-colon list of plural forms.
 # See: https://developer.mozilla.org/en/Localization_and_Plurals
