Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -386,22 +386,22 @@ externalAttachmentNotFound=Tiu ĉi apartigita kunsendaĵo kun dosiero aŭ ligilo
 # LOCALIZATION NOTE (attachmentCount): Semi-colon list of plural forms.
 # See: https://developer.mozilla.org/en/Localization_and_Plurals
 # #1 number of attachments
-attachmentCount=#1 attachment;#1 attachments
+attachmentCount=#1 kunsendaĵo;#1 kunsendaĵoj
 
 # LOCALIZATION NOTE (attachmentCountSingle): This is the format for the
 # attachment header when a message has only one attachment. This is separate
 # from attachmentCount above, since attachmentCountSingle typically ends with a
 # colon.
-attachmentCountSingle=1 attachment:
+attachmentCountSingle=1 kunsendaĵo:
 
 # LOCALIZATION NOTE (attachmentSizeUnknown): The string to show for the total
 # size of all attachments when none of the attachments' sizes can be detected.
-attachmentSizeUnknown=size unknown
+attachmentSizeUnknown=nekonata grando
 
 # LOCALIZATION NOTE (attachmentSizeAtLeast): The string to show for the total
 # size of all attachments when at least one (but not all) of the attachments'
 # sizes can't be detected. %1$S is the formatted size.
-attachmentSizeAtLeast=at least %1$S
+attachmentSizeAtLeast=almenaŭ %1$S
 
 # This is the format for prepending accesskeys to the
 # each of the attachments in the file|attachments menu:
@@ -410,7 +410,7 @@ attachmentSizeAtLeast=at least %1$S
 attachmentDisplayNameFormat=%S %S
 
 # This is the heading for the attachment summary when printing an email
-attachmentsPrintHeader=Attachments:
+attachmentsPrintHeader=Kunsendaĵoj:
 
 # Connection Error Messages
 # LOCALIZATION NOTE(unknownHostError): %S is the server name
