Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/imapMsgs.properties
+++ b/eo/mail/chrome/messenger/imapMsgs.properties
@@ -136,12 +136,15 @@ imapDone=
 
 imapEnterPasswordPromptTitle=Postulas pasvorton por retpoŝta servilo
 
+# LOCALIZATION NOTE (imapEnterPasswordPromptTitleWithUsername): Do not translate the
+# word %1$S. Place the word %1$S where the user name should appear.
+
 imapUnknownHostError=Fiaskis konekti al servilo %S.
 imapOAuth2Error=Fiaskis aŭtentigi dum konekti al servilo %S.
 
 imapConnectionRefusedError=Ne povis konekti al retpoŝta servilo %S; konekto estis rifuzita.
 
-imapNetTimeoutError=Elĉerpiĝis tempon por konekti al servilo %S.
+imapNetTimeoutError=Tempo por konekti al la servilo %S elĉerpiĝis.
 
 # Status - no messages to download
 imapNoNewMessages=Estas neniu nova mesaĝo en la servilo.
@@ -195,11 +198,19 @@ imapSubscribePrompt=Ĉu aboni al %1$S?
 
 imapServerDroppedConnection=Ne povis konekti al via servilo IMAP. Eble vi atingis maksimuman nombron da konektoj al tiu ĉi servilo. En tiu okazo malpliigu nombron da konektoj al servilo en spertulaj agordoj de via servilo IMAP.
 
+# This will occur when a folder that has never been imap selected or opened
+# (left-clicked) is first right-clicked to access quota properties.
 imapQuotaStatusFolderNotOpen=Informo pri libera disponebla spaco ne estas disponebla, ĉar la mesaĝujo ne estis malfermita.
 
+# The imap capability response reports that QUOTA is not supported.
 imapQuotaStatusNotSupported=Tiu ĉi servilo ne subtenas eblon limigi spacon.
 
 imapQuotaStatusNoQuota=Limigo de spaco por tiu ĉi mesaĝujo ne estis difinita.
+
+# The getqutaroot command succeeded but reported no quota information.
+
+# Folder properties were requested by the user (right-click) before the getquotaroot
+# command was sent.
 
 # Out of memory
 imapOutOfMemory=Mankas memoro por aplikaĵo.
