--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -414,19 +414,21 @@ attachmentsPrintHeader=Kunsendaĵoj:
 
 # Connection Error Messages
 # LOCALIZATION NOTE(unknownHostError): %S is the server name
-unknownHostError=Failed to connect to server %S.
+unknownHostError=Fiaskis konekti al la servilo %S.
 # LOCALIZATION NOTE(connectionRefusedError): %S is the server name
-connectionRefusedError=Could not connect to server %S; the connection was refused.
+connectionRefusedError=Ne povis konekti al la servilo %S; konekto estis rifuzita.
 # LOCALIZATION NOTE(netTimeoutError): %S is the server name
-netTimeoutError=Connection to server %S timed out.
+netTimeoutError=Tempo por konekti al la servilo %S elĉerpiĝis.
 # LOCALIZATION NOTE(netResetError): %S is the server name
+netResetError=Konekto al la servilo %S estis nuligita.
 # LOCALIZATION NOTE(netInterruptError): %S is the server name
+netInterruptError=Konekto al la servilo %S estis interrompita.
 
-recipientSearchCriteria=Subject or Recipient contains:
-fromSearchCriteria=Subject or From contains:
+recipientSearchCriteria=Temo aŭ ricevonto enhavas:
+fromSearchCriteria=Temo aŭ sendinto enhavas:
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages
-biffNotification_message=has %1$S new message
+biffNotification_message=ricevis %1$S novan mesaĝon
 biffNotification_messages=has %1$S new messages
 
 # LOCALIZATION NOTE(newMailNotification_message): %1$S is the name of the account %2$S is the number of new messages
