Pontoon: Update Finnish (fi) localization of Firefox Co-authored-by: Lasse Liehu <lasse.liehu@iki.fi>

--- a/fi/dom/chrome/accessibility/mac/accessible.properties
+++ b/fi/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       keskus
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      hälytys
 alertDialog =      hälytysikkuna
+dialog      =      ikkuna
 article     =      artikkeli
 document    =      dokumentti
 # The (spoken) role description for the WAI-ARIA figure role
