Pontoon: Update Norwegian Nynorsk (nn-NO) localization of Firefox Co-authored-by: Björn I. <bjorni.svindseth@yahoo.com>

--- a/nn-NO/browser/chrome/browser/browser.properties
+++ b/nn-NO/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Festa!
 confirmationHint.pinTab.description = Høgreklikk på fana for å løyse henne frå.
 
 confirmationHint.passwordSaved.label = Passord lagra!
+confirmationHint.loginRemoved.label = Innlogging fjerna!
 confirmationHint.breakageReport.label = Rapport sendt. Takk skal du ha!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
