Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -429,31 +429,31 @@ fromSearchCriteria=Temo aŭ sendinto enhavas:
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages
 biffNotification_message=ricevis %1$S novan mesaĝon
-biffNotification_messages=has %1$S new messages
+biffNotification_messages=ricevis %1$S novajn mesaĝojn
 
 # LOCALIZATION NOTE(newMailNotification_message): %1$S is the name of the account %2$S is the number of new messages
-newMailNotification_message=%1$S received %2$S new message
+newMailNotification_message=%2$S nova mesaĝo ĉe la konto %1$S
 
 # LOCALIZATION NOTE(newMailNotification_messages): %1$S is the name of the account %2$S is the number of new messages
-newMailNotification_messages=%1$S received %2$S new messages
+newMailNotification_messages=%2$S novaj mesaĝojn ĉe la konto %1$S
 
 # LOCALIZATION NOTE(newMailNotification_messagetitle): %1$S is subject of new message and %2$S is sender of new message.
 # This is UNIX only
-newMailNotification_messagetitle=%1$S from %2$S
+newMailNotification_messagetitle=Nova mesaĝo “%1$S” el %2$S
 
 # LOCALIZATION NOTE(newMailAlert_message):
 # Semi-colon list of plural forms. See:
 # https://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the name of the account, #2 is the number of new messages
-newMailAlert_message=#1 received #2 new message;#1 received #2 new messages
+newMailAlert_message=#2 nova mesaĝo ĉe la konto #1;#2 novaj mesaĝoj ĉe la konto #1
 
 # LOCALIZATION NOTE(macBiffNotification is Mac only):
 #  %1$S is the number of new messages
 #  %2$S is a list of names and/or email addresses separated by biffNotification_separator
 #  %3$S is the number of new messages not displayed in the biff alert
-macBiffNotification_message=%1$S new message from %2$S.
-macBiffNotification_messages=%1$S new messages from %2$S.
-macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+macBiffNotification_message=%1$S nova mesaĝo el %2$S.
+macBiffNotification_messages=%1$S novaj mesaĝoj el %2$S.
+macBiffNotification_messages_extra=%1$S novaj mesaĝoj el %2$S kaj %3$S pli.
 # Used to separate names/email addresses in a list.  Note the trailing space ', '
 macBiffNotification_separator=,\u0020
 
