Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -458,17 +458,18 @@ macBiffNotification_messages_extra=%1$S novaj mesaĝoj el %2$S kaj %3$S pli.
 macBiffNotification_separator=,\u0020
 
 # For the Quota tab in the mail folder properties dialog
-quotaUsedFree=%S of %S KB used
+quotaUsedFree=%S el %S KiB uzataj
 
 # For the Quota tab in the mail folder properties dialog
-quotaPercentUsed=%S%% full
+quotaPercentUsed=Uzata %S%%
 # for quota in main window (commandglue.js)
 percent=%S%%
-quotaTooltip=IMAP quota: %S KB used of %S KB total. Click for details.
+quotaTooltip=Spaco IMAP: %S KiB uzata el %S KiB tute. Klaku por detalojn.
 
+quotaTooltip2=Spaco IMAP: %S uzata el %S tute. Klaku por detalojn.
 
 # for message views
-confirmViewDeleteTitle=Confirm
+confirmViewDeleteTitle=Konfirmi
 confirmViewDeleteMessage=Are you sure you want to delete this view?
 
 # for virtual folders
