--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -470,40 +470,40 @@ quotaTooltip2=Spaco IMAP: %S uzata el %S tute. Klaku por detalojn.
 
 # for message views
 confirmViewDeleteTitle=Konfirmi
-confirmViewDeleteMessage=Are you sure you want to delete this view?
+confirmViewDeleteMessage=Ĉu vi certe volas forigi tiun ĉi vidon de mesaĝo?
 
 # for virtual folders
-confirmSavedSearchTitle=Confirm Delete
-confirmSavedSearchDeleteMessage=Are you sure you want to delete this saved search?
+confirmSavedSearchTitle=Konfirmi forigon
+confirmSavedSearchDeleteMessage=Ĉu vi certe volas forigi tiun ĉi mesaĝujon de serĉo?
 
 ## @name ENTER_PASSWORD_PROMPT
 ## @loc None
 # LOCALIZATION NOTE (passwordPrompt): Do not translate the word %S below.
 # Place the word "%S" in your translation where the email address
 # or the username should appear
-passwordPrompt=Enter your password for %1$S on %2$S:
+passwordPrompt=Enigu pasvorton por %1$S ĉe %2$S:
 
 ## @name ENTER_PASSWORD_PROMPT_TITLE
 ## @loc None
-passwordTitle=Mail Server Password Required
+passwordTitle=Pasvorto por retpoŝta servilo postulata
 
 # for checking if the user really wants to open lots of messages in separate windows.
-openWindowWarningTitle=Confirm
+openWindowWarningTitle=Konfirmi
 # LOCALIZATION NOTE (openWindowWarningConfirmation): Semi-colon list of plural forms.
 # #1 is the number of messages the user is attempting to open.
-openWindowWarningConfirmation=Opening #1 message may be slow. Continue?;Opening #1 messages may be slow. Continue?
+openWindowWarningConfirmation=Malfermo de mesaĝo povas okupiĝi iom da tempo. Ĉu pluigi?;Malfermo de #1 mesaĝoj povas okupiĝi iom da tempo. Ĉu pluigi?
 
 # for checking if the user really wants to open lots of messages in tabs.
-openTabWarningTitle=Confirm
+openTabWarningTitle=Konfirmi
 # LOCALIZATION NOTE (openTabWarningConfirmation): Semi-colon list of plural forms.
 # #1 is the number of messages the user is attempting to open.
-openTabWarningConfirmation=Opening #1 message may be slow. Continue?;Opening #1 messages may be slow. Continue?
+openTabWarningConfirmation=Malfermo de mesaĝo povas okupiĝi iom da tempo. Ĉu pluigi?;Malfermo de #1 mesaĝoj povas okupiĝi iom da tempo. Ĉu pluigi?
 
 # for warning the user that a tag they're trying to create already exists
-tagExists=A tag with that name already exists.
+tagExists=Etikedo kun tiu ĉi nomo jam ekzistas.
 
 # title of the edit tag dialog
-editTagTitle=Edit Tag
+editTagTitle=Redakti etikedon
 
 # for the virtual folder list dialog title
 # %S is the name of the saved search folder
