Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -507,9 +507,9 @@ editTagTitle=Redakti etikedon
 
 # for the virtual folder list dialog title
 # %S is the name of the saved search folder
-editVirtualFolderPropertiesTitle=Edit Saved Search Properties for %S
+editVirtualFolderPropertiesTitle=Redakti atributojn de mesaĝujo de serĉo: %S
 # LOCALIZATION NOTE (foldersChosen): #1 number of chosen folders
-virtualFolderSourcesChosen=#1 folder chosen;#1 folders chosen
+virtualFolderSourcesChosen=#1 mesaĝujo elektita;#1 mesaĝujoj elektitaj
 
 #alert to inform the user to choose one or more folders to search for a saved search folder
 alertNoSearchFoldersSelected=You must choose at least one folder to search for the saved search folder.
